--- a/css/index.scss
+++ b/css/index.scss
@@ -1,12 +1,16 @@
 * {
     box-sizing: border-box;
 }
+body{
+  margin: 0;
+}
 
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
     max-width: 100%;
+    min-width: 20%;
     background-color: rgb(193,170,232);
 }
 
@@ -23,17 +27,25 @@ h1 {
 .btnOpenMenu {
     display: flex;
     justify-content: center;
-    border: none;
-    margin-top: 1em;
+    border:none;
     width: 4em;
     background-color: rgb(193,170,232);
     margin-right: 4em;
 }
 #myMenuMobile {
-    /*display:none;*/
-    width:15% ;
+  position: absolute;
+  right: 0;
+  display:none;
+  opacity: 1;
+  width: 200px;
+    margin-top: 0;
     background-color: rgb(107,61,232);
+    background: -webkit-linear-gradient(rgb(193,170,232),rgb(107,61,232));
+    background: -o-linear-gradient(rgb(193,170,232),rgb(107,61,232));
+    background: -moz-linear-gradient(rgb(193,170,232),rgb(107,61,232));
+    background: linear-gradient(rgb(193,170,232),rgb(107,61,232));
 }
+
 
 
 
@@ -67,12 +79,14 @@ h1 {
 
 .bounceInDown {
   animation-name: bounceInDown;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
 }
 
 li {
+list-style: none;
+padding-top: 2em;
 
-    list-style: none;
+
 
 }
 
@@ -102,14 +116,17 @@ img {
 .menuComputer {
     display: none;
 }
-/*@media only screen and (min-device-width:800px) {
+@media  screen and (min-device-width:800px) {
 
 .btnOpenMenu{
   display: none;
+}
+#myMenuMobile{
+  opacity: 0;
 }
 .menuComputer{
   display: flex;
   flex-direction:row;
 }
 
-}*/
+}
