html css sass y js ok

--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -1,1 +1,9 @@
-
+$primaryColor :#c1aae8;
+$secondaryColor :#6b3de8;
+$font : 'Ubuntu', sans-serif;
+* {
+    box-sizing: border-box;
+}
+body{
+  margin: 0;
+}
