--- a/css/index.scss
+++ b/css/index.scss
@@ -1,132 +1,5 @@
-* {
-    box-sizing: border-box;
-}
-body{
-  margin: 0;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    max-width: 100%;
-    min-width: 20%;
-    background-color: rgb(193,170,232);
-}
-
-h1 {
-    font-family: 'Ubuntu', sans-serif;
-    padding-left: 2em;
-}
-
-.imgMenu {
-    width: 4em;
-    height: 4em;
-}
-
-.btnOpenMenu {
-    display: flex;
-    justify-content: center;
-    border:none;
-    width: 4em;
-    background-color: rgb(193,170,232);
-    margin-right: 4em;
-}
-#myMenuMobile {
-  position: absolute;
-  right: 0;
-  display:none;
-  opacity: 1;
-  width: 200px;
-    margin-top: 0;
-    background-color: rgb(107,61,232);
-    background: -webkit-linear-gradient(rgb(193,170,232),rgb(107,61,232));
-    background: -o-linear-gradient(rgb(193,170,232),rgb(107,61,232));
-    background: -moz-linear-gradient(rgb(193,170,232),rgb(107,61,232));
-    background: linear-gradient(rgb(193,170,232),rgb(107,61,232));
-}
-
-
-
-
-@keyframes bounceInDown {
-  from, 60%, 75%, 90%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  }
-
-  0% {
-    opacity: 0;
-    transform: translate3d(0, -3000px, 0);
-  }
-
-  60% {
-    opacity: 1;
-    transform: translate3d(0, 25px, 0);
-  }
-
-  75% {
-    transform: translate3d(0, -10px, 0);
-  }
-
-  90% {
-    transform: translate3d(0, 5px, 0);
-  }
-
-  to {
-    transform: none;
-  }
-}
-
-.bounceInDown {
-  animation-name: bounceInDown;
-  animation-duration: 0.5s;
-}
-
-li {
-list-style: none;
-padding-top: 2em;
-
-
-
-}
-
-
-a {
-    display: inline-flex;
-    align-items: center;
-    font-family: 'Ubuntu', sans-serif;
-    text-decoration: none;
-    color: black;
-    margin-right: 1em;
-}
-
-img {
-    width: 2em;
-    height: 2em;
-}
-
-
-.menuComputer {
-    display: flex;
-    flex-direction: row;
-    padding-right: 4em;
-    list-style: none;
-}
-
-.menuComputer {
-    display: none;
-}
-@media  screen and (min-device-width:800px) {
-
-.btnOpenMenu{
-  display: none;
-}
-#myMenuMobile{
-  opacity: 0;
-}
-.menuComputer{
-  display: flex;
-  flex-direction:row;
-}
-
-}
+@import"settings.scss";
+@import"layout.scss";
+@import"general";
+@import"components";
+@import"animations";
