--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,5 @@
 @import"settings.scss";
 @import"layout.scss";
-@import"general";
-@import"components";
-@import"animations";
+@import"general.scss";
+@import"components.scss";
+@import"animations.scss";
