--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,9 @@ header {
   background: -webkit-gradient(linear, left top, left bottom, from(#c1aae8), to(#6b3de8));
   background: linear-gradient(#c1aae8, #6b3de8); }
 
+.open-menu-mobile {
+  display: block; }
+
 .menuComputer {
   display: none; }
 
